# PARSHL-Cpp

./: .gitignore  LICENSE  README.md
V1/: CMakeLists.txt  README.md
V1/src/: fftw_wrap.cpp  fftw_wrap.hpp  io_sndfile.cpp  io_sndfile.hpp  main.cpp  parshl_audio_peaks.cpp  parshl_complex_peak.cpp  parshl_complex_peak.hpp  parshl_dbffa.cpp  parshl_dbffa.hpp  parshl_defaults.hpp  parshl_findpartials.cpp  parshl_findpartials.hpp  parshl_findpeaks.cpp  parshl_findpeaks.hpp  parshl_getwin.cpp  parshl_getwin.hpp  parshl_globals.cpp  parshl_globals.hpp  parshl_partials_writer.cpp  parshl_partials_writer.hpp  parshl_peak_claim.cpp  parshl_peak_claim.hpp  parshl_qinterp.cpp  parshl_qinterp.hpp  parshl_qisort.cpp  parshl_qisort.hpp  parshl_stft.cpp  parshl_stft.hpp  parshl_stft_peaks_demo.cpp  parshl_synthesize.cpp  parshl_synthesize.hpp  parshl_t2_tracker.cpp  parshl_t2_tracker.hpp  parshl_tracker.cpp  parshl_tracker.hpp  sail_array.hpp
V2/: CMakeLists.txt  README.md
V2/src/: fftw_wrap.cpp  fftw_wrap.hpp  io_sndfile.cpp  io_sndfile.hpp  main.cpp  parshl_audio_peaks.cpp  parshl_complex_peak.cpp  parshl_complex_peak.hpp  parshl_dbffa.cpp  parshl_dbffa.hpp  parshl_defaults.hpp  parshl_findpartials.cpp  parshl_findpartials.hpp  parshl_findpeaks.cpp  parshl_findpeaks.hpp  parshl_getwin.cpp  parshl_getwin.hpp  parshl_globals.cpp  parshl_globals.hpp  parshl_partials_writer.cpp  parshl_partials_writer.hpp  parshl_qinterp.cpp  parshl_qinterp.hpp  parshl_qisort.cpp  parshl_qisort.hpp  parshl_stft.cpp  parshl_stft.hpp  parshl_stft_peaks_demo.cpp  parshl_synthesize.cpp  parshl_synthesize.hpp  parshl_tracker.cpp  parshl_tracker.hpp  sail_array.hpp
V3/: CMakeLists.txt  README.md
V3/src/: fftw_wrap.cpp  fftw_wrap.hpp  io_sndfile.cpp  io_sndfile.hpp  main.cpp  parshl_audio_peaks.cpp  parshl_complex_peak.cpp  parshl_complex_peak.hpp  parshl_dbffa.cpp  parshl_dbffa.hpp  parshl_defaults.hpp  parshl_findpartials.cpp  parshl_findpartials.hpp  parshl_findpeaks.cpp  parshl_findpeaks.hpp  parshl_getwin.cpp  parshl_getwin.hpp  parshl_globals.cpp  parshl_globals.hpp  parshl_partials_writer.cpp  parshl_partials_writer.hpp  parshl_qinterp.cpp  parshl_qinterp.hpp  parshl_qisort.cpp  parshl_qisort.hpp  parshl_stft.cpp  parshl_stft.hpp  parshl_stft_peaks_demo.cpp  parshl_synthesize.cpp  parshl_synthesize.hpp  parshl_tracker.cpp  parshl_tracker.hpp  sail_array.hpp
original_source/: parshl-source.txt
